--- a/Output/Template.build_log.htm
+++ b/Output/Template.build_log.htm
@@ -28,11 +28,12 @@ Project File Date:  05/23/2017
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'd:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'adc£¨DMA£©'
 compiling main.c...
+compiling stm32f10x_it.c...
 linking...
-Program Size: Code=15956 RO-data=336 RW-data=112 ZI-data=1648  
+Program Size: Code=16136 RO-data=336 RW-data=108 ZI-data=1660  
 FromELF: creating hex file...
 "..\..\Output\Template.axf" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
